FEAT: requisições necessárias para a implementação da grid de chamados

--- a/api/fornari.nucleo/src/main/resources/application.properties
+++ b/api/fornari.nucleo/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=fornari.nucleo
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.main.allow-circular-references=true
 
 # Essas 2 só devem ser usadas caso use o banco H2
 # permite o acesso ao h2 console: localhost:8080/h2-console
