--- a/api/fornari.nucleo/src/main/resources/application.properties
+++ b/api/fornari.nucleo/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:banco
 server.error.include-message=always
 server.error.include-binding-errors=always
+
+jwt.secret=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE3MjgyNjE0MjJ9.3rq5zJ0XypcJP2GyyfIWjlugnRkOC2gHFf1Q6NZn-yU
