FEAT: criação de alunos, adicionar responsável, e CRUDS de restrições alimentares

--- a/api/fornari.nucleo/src/main/resources/application.properties
+++ b/api/fornari.nucleo/src/main/resources/application.properties
@@ -3,8 +3,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:banco
+spring.datasource.username=admin
+spring.datasource.password=admin
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
 
 server.error.include-message=always
 server.error.include-binding-errors=always
 
-jwt.secret=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE3MjgyNjE0MjJ9.3rq5zJ0XypcJP2GyyfIWjlugnRkOC2gHFf1Q6NZn-yU
