--- a/api/fornari.nucleo/src/main/resources/application.properties
+++ b/api/fornari.nucleo/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
 
 spring.liquibase.change-log=classpath:/liquibase/master.xml
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
