--- a/api/fornari.nucleo/src/main/resources/application.properties
+++ b/api/fornari.nucleo/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
+server.servlet.context-path=/api
 
 spring.liquibase.change-log=classpath:/liquibase/master.xml
 spring.liquibase.enabled=false
