FIX: jwt secret

--- a/api/fornari.nucleo/src/main/resources/application.properties
+++ b/api/fornari.nucleo/src/main/resources/application.properties
@@ -30,7 +30,7 @@ file.upload-dir=/uploads
 server.error.include-message=always
 server.error.include-binding-errors=always
 
-jwt.secret=secret_padrao
+jwt.secret=ZGFzZnd1ZTNmNDN3MGZ1bndlZm51Y2Z3cmVmYXJnZWZlZmY=
 jwt.validity=3600000
 api.security.token.secret=${JWT_SECRET:${jwt.secret}}
 
