--- a/api/fornari.nucleo/src/main/resources/application.properties
+++ b/api/fornari.nucleo/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.datasource.username=admin
 #spring.datasource.password=admin
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/fornari
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.username=${SQL_USER:root}
+spring.datasource.password=${SQL_PASSWORD:admin}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
