FIX: credenciais do EMAIL como variável de ambient

--- a/api/fornari.nucleo/Dockerfile
+++ b/api/fornari.nucleo/Dockerfile
@@ -12,6 +12,8 @@ RUN mvn clean package -DskipTests
 FROM eclipse-temurin:17.0.12_7-jdk
 
 ENV MYSQL_HOST=IP_DO_BANCO
+ENV EMAIL_SPRING=EMAIL_DO_SPRING
+ENV SENHA_EMAIL_SPRING=SENHA_123
 ENV SENHA_PADRAO=\$2a\$10\$H.GMLpeVWahKwhhf/2/L3ew33wL7fiGWcVQC6GXlKBLBIqRlk4bvm
 ENV JWT_SECRET=8402962772ac1c2b09dadf3c52d844f6d79f45a66d7185a10a9e9cd692a68169
 ENV SQL_PASSWORD=admin
