--- a/api/fornari.nucleo/src/main/resources/application.properties
+++ b/api/fornari.nucleo/src/main/resources/application.properties
@@ -36,8 +36,8 @@ api.security.token.secret=${JWT_SECRET:${jwt.secret}}
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=seuemail@gmail.com
-spring.mail.password=sua app password
+spring.mail.username=${EMAIL_SPRING:seu_email}
+spring.mail.password=${SENHA_EMAIL_SPRING:sua_app_password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
