--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,3 +21,20 @@ jobs:
       - name: Build with Maven
         run: mvn -B package -DskipTests
         working-directory: ./api/fornari.nucleo
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Run tests with Maven
+        run: mvn -B test
+        working-directory: ./api/fornari.nucleo
