--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Front
+name: CI Back-end
 
 on:
   push:
@@ -38,3 +38,30 @@ jobs:
       - name: Run tests with Maven
         run: mvn -B test
         working-directory: ./api/fornari.nucleo
+        
+    docker:
+      runs-on: ubuntu-latest
+      needs:
+      - build
+      - test
+      steps:
+        - name: Checkout source code
+          uses: actions/checkout@v3
+
+        - name: Set up QEMU
+          uses: docker/setup-qemu-action@v3
+
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v3
+
+        - name: Login to Docker Hub
+          uses: docker/login-action@v3
+          with:
+            username: ${{ secrets.DOCKERHUB_USER }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+        - name: Build and Push
+          uses: docker/build-push-action@v5
+          with:
+            push: true
+            tags: carlozeduardo/backend:latest
