--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,8 @@ name: CI Back-end
 
 on:
   push:
-    branches: [ master ]
+    branches:  
+      - master 
 
 jobs:
   build:
@@ -22,46 +23,46 @@ jobs:
         run: mvn -B package -DskipTests
         working-directory: ./api/fornari.nucleo
 
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  # test:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
+  #     - name: Set up JDK 17
+  #       uses: actions/setup-java@v4
+  #       with:
+  #         distribution: 'temurin'
+  #         java-version: '17'
 
-      - name: Run tests with Maven
-        run: mvn -B test
-        working-directory: ./api/fornari.nucleo
+  #     - name: Run tests with Maven
+  #       run: mvn -B test
+  #       working-directory: ./api/fornari.nucleo
         
-    docker:
-      runs-on: ubuntu-latest
-      needs:
-      - build
-      - test
-      steps:
-        - name: Checkout source code
-          uses: actions/checkout@v3
+  #   docker:
+  #     runs-on: ubuntu-latest
+  #     needs:
+  #     - build
+  #     - test
+  #     steps:
+  #       - name: Checkout source code
+  #         uses: actions/checkout@v3
 
-        - name: Set up QEMU
-          uses: docker/setup-qemu-action@v3
+  #       - name: Set up QEMU
+  #         uses: docker/setup-qemu-action@v3
 
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v3
+  #       - name: Set up Docker Buildx
+  #         uses: docker/setup-buildx-action@v3
 
-        - name: Login to Docker Hub
-          uses: docker/login-action@v3
-          with:
-            username: ${{ secrets.DOCKERHUB_USER }}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
+  #       - name: Login to Docker Hub
+  #         uses: docker/login-action@v3
+  #         with:
+  #           username: ${{ secrets.DOCKERHUB_USER }}
+  #           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-        - name: Build and Push
-          uses: docker/build-push-action@v5
-          with:
-            push: true
-            tags: carlozeduardo/backend:latest
+  #       - name: Build and Push
+  #         uses: docker/build-push-action@v5
+  #         with:
+  #           push: true
+  #           tags: carlozeduardo/backend:latest
