--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,22 +26,22 @@ jobs:
         run: mvn -B package -DskipTests
         working-directory: ./api/fornari.nucleo
 
-  # test:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Set up JDK 17
-  #       uses: actions/setup-java@v4
-  #       with:
-  #         distribution: 'temurin'
-  #         java-version: '17'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-  #     - name: Run tests with Maven
-  #       run: mvn -B test
-  #       working-directory: ./api/fornari.nucleo
+      - name: Run tests with Maven
+        run: mvn -B test
+        working-directory: ./api/fornari.nucleo
         
   #   docker:
   #     runs-on: ubuntu-latest
