#fix - add docker file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./api/fornari.nucleo
-          file: ./api/fornari.nucleo/Dockerfile  
+          file: ./Dockerfile
           push: true
           tags: carlozeduardo/backend:latest
