--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,11 @@ name: CI Back-end
 
 on:
   push:
-    branches: [ master ]
+    branches:  
+      - master 
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
@@ -25,7 +29,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: build
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -39,13 +42,12 @@ jobs:
       - name: Run tests with Maven
         run: mvn -B test
         working-directory: ./api/fornari.nucleo
-
+        
   docker:
     runs-on: ubuntu-latest
     needs:
       - build
       - test
-
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
