--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -73,7 +73,7 @@ jobs:
           tags: carlozeduardo/backend:latest
 
   deploy:
-    runs-on: self-hosted
+    runs-on: [self-hosted, backend]
     needs:
     - build
     - test
