--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -100,7 +100,7 @@ jobs:
   
   deploy-2:
     runs-on: [self-hosted]
-    needs: [build, test, docker, deploy-1]
+    needs: [build, test, docker]
     steps:
      - name: Pull Docker image
        run: docker pull carlozeduardo/backend:latest
